// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React createElement transforms should transform React.createElement calls #2 1`] = `
"const React = require(\\"react\\");

const __reactCreateElement__ = React.createElement;
export function MyComponent() {
  return __reactCreateElement__(\\"div\\", null, __reactCreateElement__(\\"span\\", null, \\"Hello world!\\"));
}"
`;

exports[`React createElement transforms should transform React.createElement calls #3 1`] = `
"const React = require(\\"react\\");

const __reactCreateElement__ = React.createElement;

const node = __reactCreateElement__(\\"div\\", null, __reactCreateElement__(\\"span\\", null, \\"Hello world!\\"));

export function MyComponent() {
  return node;
}"
`;

exports[`React createElement transforms should transform React.createElement calls 1`] = `
"import React from \\"react\\";
const __reactCreateElement__ = React.createElement;
export function MyComponent() {
  return __reactCreateElement__(\\"div\\");
}"
`;
